--- a/chickenfries_weather_app/index.html
+++ b/chickenfries_weather_app/index.html
@@ -1,13 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather Website _ ChickenFries</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Weather website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="container">
+        <div id="location">
+            <input type="text" id="country" placeholder="Country">
+            <input type="text" id="city" placeholder="City">
+            <input type="submit" id="check" value="Go">
+        </div>
+        <img src="tempicons/clouds.svg" alt="" id="tempIcon">
+        <div class="flex">
+        <h2 id="weatherCountry">Cityname</h2>
+        <h2 id="temperature">0°<strong>C</strong></h2>
+        <h2 id="weatherDescription">Description</h2>
+        <ul>
+            <div class="features">
+            <li id="feelsLike">Feels Like 0°C</li>
+            <li id="humidity">Humidity 0</li>
+            <li id="longitude">Longitude 0</li>
+            <li id="latitude">Latitude 0</li>
+            </div>
+        </ul>
+        <div class="h1">Done by ninayal</div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
