--- a/chickenfries_weather_app/index.html
+++ b/chickenfries_weather_app/index.html
@@ -11,7 +11,7 @@
       src="https://kit.fontawesome.com/0d77a449e7.js"
       crossorigin="anonymous"
     ></script>
-    <title>Vite + React</title>
+    <title>Weather_ChickenFries</title>
   </head>
   <body>
     <div id="root"></div>
